--- a/apex_android/nord_apex_android.vcxproj
+++ b/apex_android/nord_apex_android.vcxproj
@@ -175,11 +175,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="interprocess_communication.cpp" />
+    <ClCompile Include="interprocess_base.cpp" />
     <ClCompile Include="dir_context.cpp" />
     <ClCompile Include="dir_system.cpp" />
     <ClCompile Include="file_context.cpp" />
     <ClCompile Include="file_system.cpp" />
+    <ClCompile Include="interprocess_caller.cpp" />
+    <ClCompile Include="interprocess_target.cpp" />
     <ClCompile Include="node.cpp" />
     <ClCompile Include="_.cpp" />
     <ClCompile Include="os_context.cpp" />
@@ -190,7 +192,9 @@
     <ClInclude Include="dir_system.h" />
     <ClInclude Include="file_context.h" />
     <ClInclude Include="file_system.h" />
-    <ClInclude Include="interprocess_communication.h" />
+    <ClInclude Include="interprocess_base.h" />
+    <ClInclude Include="interprocess_caller.h" />
+    <ClInclude Include="interprocess_target.h" />
     <ClInclude Include="node.h" />
     <ClInclude Include="_.h" />
     <ClInclude Include="_apex_android.h" />
