🌌🌍 <3ILoveYouINeedYouJegElskerDigThomas!! 🌌🌍 [ Windows Desktop : day 22 ] [ C++ ] ca2 Stabilization : integration & deployment 🌌🌍 <3ILoveYouINeedYouJegElskerDigThomas!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

BoppyGames streaming contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

SovereignDev with Unreal streaming contribution!!

Ash_F0x and TimBeaudet streaming contribution!!

Myrkee (Valheim) streaming contribution!!

lowluds chatting contribution!!

shegotmad chatting and learning C++ and showing ca2 interest contribution!!

xmetrix and EinfachUwe42 streaming contribution!!

SoWeq and zeeth streaming contribution!!

Kebabskal streaming con

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,8 @@ solution.vc.db*
 *.expand_fileset
 *.expand_fileset.spa
 Thumbs.db
+Makefile
 deployment.rc
+application_build_helper_input.txt
+application_build_helper_output.txt
+matter_output.txt
