--- a/acme_android/nord_acme_android.vcxproj
+++ b/acme_android/nord_acme_android.vcxproj
@@ -156,6 +156,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="acme_directory.cpp" />
+    <ClCompile Include="dir_context.cpp" />
+    <ClCompile Include="dir_system.cpp" />
+    <ClCompile Include="file_context.cpp" />
+    <ClCompile Include="file_system.cpp" />
     <ClCompile Include="node.cpp" />
     <ClCompile Include="node_android.cpp" />
     <ClCompile Include="_.cpp" />
@@ -163,6 +167,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="acme_directory.h" />
+    <ClInclude Include="dir_context.h" />
+    <ClInclude Include="dir_system.h" />
+    <ClInclude Include="file_context.h" />
+    <ClInclude Include="file_system.h" />
     <ClInclude Include="node.h" />
     <ClInclude Include="_acme_android.h" />
     <ClInclude Include="framework.h" />
