--- a/acme_android/nord_acme_android.vcxproj.filters
+++ b/acme_android/nord_acme_android.vcxproj.filters
@@ -16,6 +16,18 @@
     <ClInclude Include="acme_directory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dir_context.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dir_system.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="file_context.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="file_system.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
@@ -39,6 +51,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="node_android.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dir_context.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dir_system.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="file_context.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="file_system.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
